@@ -10,6 +10,8 @@ ispCP ω 1.0.0 Changelog
     - GUI:
         * Fixed #840: Wrong comment of tr() function in i18n.php
         * Fixed #852: Undefined variable: name in /var/www/ispcp/gui/include/admin-functions.php on line 2336
+    - CONFIGS:
+        * Partially implemented #825: postfix improvements
     - ENGINE:
         * Fixed #839: Error "/bin/rm: missing operand" caused by cronjobs
         * Fixed #838: chrootkit log is empty
